WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167687
The CSS property -webkit-text-stroke is not applied on captions.
https://bugs.webkit.org/show_bug.cgi?id=167687
Summary
The CSS property -webkit-text-stroke is not applied on captions.
Per Arne Vollan
Reported
2017-02-01 04:26:55 PST
Styling captions with text stroke has no effect on text rendering.
Attachments
Patch
(1.25 KB, patch)
2017-02-01 04:33 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(4.11 KB, patch)
2017-02-03 05:29 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-02-01 04:33:45 PST
Created
attachment 300319
[details]
Patch
Per Arne Vollan
Comment 2
2017-02-01 04:35:06 PST
<
rdar://problem/30305523
>
Brent Fulgham
Comment 3
2017-02-01 09:17:16 PST
Comment on
attachment 300319
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=300319&action=review
This change looks good, but please create a test case.
> Source/WebCore/ChangeLog:8 > + Add style to list of valid properties for cue.
This is a simple change, but it seems like a test case would help us avoid this breaking in the future. Could you please create a LayoutTest for this?
Per Arne Vollan
Comment 4
2017-02-03 05:29:36 PST
Created
attachment 300521
[details]
Patch
Per Arne Vollan
Comment 5
2017-02-03 07:11:33 PST
(In reply to
comment #3
)
> Comment on
attachment 300319
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=300319&action=review
> > This change looks good, but please create a test case. > > > Source/WebCore/ChangeLog:8 > > + Add style to list of valid properties for cue. > > This is a simple change, but it seems like a test case would help us avoid > this breaking in the future. > > Could you please create a LayoutTest for this?
Thanks for reviewing :) Updated patch.
Brent Fulgham
Comment 6
2017-02-03 08:43:25 PST
Comment on
attachment 300521
[details]
Patch Thank you for adding the test! r=me
Brent Fulgham
Comment 7
2017-02-03 09:14:09 PST
<
rdar://problem/17940996
>
WebKit Commit Bot
Comment 8
2017-02-03 09:41:01 PST
Comment on
attachment 300521
[details]
Patch Clearing flags on attachment: 300521 Committed
r211637
: <
http://trac.webkit.org/changeset/211637
>
WebKit Commit Bot
Comment 9
2017-02-03 09:41:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug