The CSS property -webkit-text-stroke is not applied on captions. https://bugs.webkit.org/show_bug.cgi?id=167687

Reviewed by Brent Fulgham.

Source/WebCore:

Add style to list of valid properties for cue.

Test: media/track/track-css-stroke-cues.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::isValidCueStyleProperty):

LayoutTests:

* media/track/track-css-stroke-cues-expected.txt: Added.
* media/track/track-css-stroke-cues.html: Added.


Canonical link: https://commits.webkit.org/184840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211637 268f45cc-cd09-0410-ab3c-d52691b4dbfc